# antidote

./: .gitignore  .gitleaks.toml  CHANGELOG.md  README.md  pyproject.toml
antidote_mcp/: analyzer.py  cache.py  discovery.py  html_report.py  main.py  models.py  parser.py  reporter.py
docs/: design.md
docs/plans/: 2026-04-27-mcp-scan.md
mcp_scan/: analyzer.py  discovery.py  graph.py  main.py  models.py  parser.py  reporter.py
tests/: test_analyzer.py  test_discovery.py  test_graph.py  test_main.py  test_models.py  test_parser.py  test_reporter.py
tests/fixtures/: chained_config.json  injection_config.json  malformed_config.json  permission_config.json
