[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-scan"
version = "0.1.0"
description = "MCP security analyzer — tool vulnerability scanner and propagation graph"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "networkx>=3.4",
    "mcp>=1.6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
mcp-scan = "mcp_scan.main:main"
