[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antidote-mcp"
version = "0.2.0"
description = "Security scanner for MCP tool servers — detects poisoning, injection surfaces, and propagation paths"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "networkx>=3.4",
    "mcp>=1.6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
antidote = "antidote_mcp.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
